--- a/src/styles.css
+++ b/src/styles.css
@@ -222,3 +222,9 @@
     font-weight: 500;
 	}
 }
+
+
+.main-content-small app-inventoryfooter #main,
+.main-content-small app-inventoryfooter #header  {
+  left: 200px;
+}
